fixed cart button mobile

--- a/apps/delivery-web/src/components/MobileCartButton/MobileCartButton.module.css
+++ b/apps/delivery-web/src/components/MobileCartButton/MobileCartButton.module.css
@@ -1,17 +1,11 @@
 @media (max-width: 768px) {
-
   .mobileCartButton {
-    position: fixed;
-    left: 0;
-    bottom: 0;
     width: 100%;
     height: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 46px;
     z-index: 9999;
-
   }
 
   .button {
@@ -24,21 +18,6 @@
     border-radius: 4px;
     margin-left: 12px;
     margin-right: 12px;
-  }
-
-  .addToCartLeft {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    gap: 8px;
-    white-space: nowrap;
-  }
-
-  .addToCartRight {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    white-space: nowrap;
   }
 
   .iconShoppingCart {
